--- a/page.html
+++ b/page.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Your CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title>Practice Assignment 2</title>
 </head>
@@ -13,8 +14,6 @@
 
 
 
-<!-- jQuery -->
-<script src="js/jquery-3.3.1.min.js"></script>
 <!-- Bootstrap JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 <!-- Your JavaScript goes here -->
