--- a/page.html
+++ b/page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,15 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Practice Assignment 2</title>
 </head>
+
 <body>
 
 
 
-<!-- Bootstrap JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Your JavaScript goes here -->
+    <!-- Bootstrap JavaScript -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- Your JavaScript goes here -->
 
 </body>
+
 </html>
