--- a/practice_assignment_2.html
+++ b/practice_assignment_2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Your CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Practice Assignment 2</title>
+    <title>CTEC 126 - Practice Assignment 2</title>
 </head>
 
 <body>
