--- a/practice_assignment_2.html
+++ b/practice_assignment_2.html
@@ -18,7 +18,7 @@
 
     <!-- Bootstrap JavaScript -->
     <script src="js/bootstrap.bundle.min.js"></script>
-    <!-- Your JavaScript goes here -->
+    <!-- Your JavaScript must go here -->
 
 </body>
 
